--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <div class="row">
                         <div class="col-md-3">
 
-                            <p id="Header-Target-">Target Number </p>
+                            <p id="header-Target-">Target Number  </p>
 
-                            <p id=target-Number> -- </p>
+                            <p id="target-Number"> -- </p>
                         </div>
                         <div class="col-md-3">
 
