--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                     <div class="row">
                         <div class="col-md-3">
 
-                            <p id="header-Target-">Target Number  </p>
+                            <p id="header-Target-">Target Number </p>
 
-                            <p id="target-Number"> -- </p>
+                            <p id="target-Number"> --
+                            </p>
                         </div>
                         <div class="col-md-3">
 
@@ -61,6 +62,12 @@
                             </p>
                         </div>
                     </div>
+                    <div class="row">
+                            <div class="col-md-12">
+                                    <h2 id ="winLossMsg" " "></h2>
+                                        
+                                        </div>
+                                        </div>
 
             </div>
         </div>
