--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                         </div>
                     </div>
                     <div class="row">
-                            <div class="col-md-12">
-                                    <h2 id ="winLossMsg" " "></h2>
-                                        
-                                        </div>
-                                        </div>
+                        <div class="col-md-12">
+                            <h2 id="winLossMsg">&nbsp</h2>
+
+                        </div>
+                    </div>
 
             </div>
         </div>
