--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Crystal Collectors!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,7 +29,7 @@
                 <p> By clicking on a crystal, you will add a specific
                     amount of points to your total score.</p>
                 <p> You will win the game by matching your total score to the random number.</p>
-                <p> You value of each crystal is hidden from you until you click on it.</p>
+                <p> The value of each crystal is hidden from you until you click on it.</p>
                 <p> Each time the game starts, the game will change the value of each crystal.</p>
                 <p class="lead">
                     <div class="row">
